<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="welcome_screen_text"> Добро пожаловать в MovieCatalog </string>
    <string name="accountEntry">Войти в аккаунт</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="entry">Войти</string>
    <string name="sign_in_screen_text">Вход в аккаунт</string>
    <string name="backbutton">backButton</string>
    <string name="email">Электронная почта</string>
    <string name="username">Имя</string>
    <string name="passwordConfirmation">Подтвердите пароль</string>
    <string name="birthDate">Дата рождения</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="sign_up_screen_header">Регистрация</string>
    <string name="closeicon">closeIcon</string>
    <string name="passwordVisibility">eyeOff/eyeOn</string>
    <string name="calender">calenderIcon</string>
    <string name="feed">Лента</string>
    <string name="films">Фильмы</string>
    <string name="library">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="movie_tittle">Название</string>
    <string name="movie_country">Страна/год</string>
    <string name="genres_1">Жанр1</string>
    <string name="second_genre">Жанр2</string>
    <string name="watch_button_text">Смотреть</string>
    <string name="RandomMovie">Случайный фильм</string>
    <string name="likedMovies">Мне нравится</string>
    <string name="allMovies">Все</string>
    <string name="movieCollection">Все фильмы</string>
    <string name="personal_info">Личная Информация</string>
    <string name="gender">Пол</string>
    <string name="friends">Мои друзья</string>
    <string name="logout">Выход</string>
    <string name="closeDialog">Закрыть</string>
    <string name="applyDialog">Применить</string>
    <string name="movie_service_rating">Рейтинг</string>
    <string name="info">Информация</string>
    <string name="countries">Страны</string>
    <string name="country">Страна</string>
    <string name="age">Возраст</string>
    <string name="time">Время</string>
    <string name="release_year">Год выхода</string>
    <string name="producer">Режиссёр</string>
    <string name="genres">Жанры</string>
    <string name="budget_category">Финансы</string>
    <string name="budget">Бюджет</string>
    <string name="bank">Сборы в мире</string>
    <string name="reviews">Отзывы</string>
    <string name="anonimus">Анонимный пользователь</string>
    <string name="reviewText">Текст отзыва</string>
    <string name="anonReview">Анонимный отзыв</string>
    <string name="sendReview">Отправить</string>
    <string name="addReview">Добавить отзыв</string>
    <string name="editReview">Изменить отзыв</string>
    <string name="addNewReview">Добавить отзыв</string>
    <string name="EditReview">Изменить отзыв</string>
    <string name="myFriends">Мои Друзья</string>

</resources>