<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackgroundDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/sub_container_round_corners"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutScroller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="9">

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageContainer1"
                android:layout_width="wrap_content"
                android:layout_height="144dp"
                android:scaleType="center"
                app:layout_constraintTop_toTopOf="@+id/imageLayout"
                app:srcCompat="@drawable/image_container1" />

            <ImageView
                android:id="@+id/imageContainer2"
                android:layout_width="wrap_content"
                android:layout_height="143dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@+id/imageContainer1"
                app:srcCompat="@drawable/image_container2" />

            <ImageView
                android:id="@+id/imageContainer3"
                android:layout_width="wrap_content"
                android:layout_height="143dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@+id/imageContainer2"
                app:srcCompat="@drawable/image_container3" />

            <ImageView
                android:id="@+id/imageContainer4"
                android:layout_width="wrap_content"
                android:layout_height="143dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@+id/imageContainer3"
                app:srcCompat="@drawable/image_container4" />

            <ImageView
                android:id="@+id/imageContainer5"
                android:layout_width="wrap_content"
                android:layout_height="143dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="@+id/imageContainer4"
                app:srcCompat="@drawable/image_container5" />

            <ImageView
                android:id="@+id/imageContainer6"
                android:layout_width="wrap_content"
                android:layout_height="143dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@+id/imageContainer5"
                app:srcCompat="@drawable/image_container6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="434dp"
            android:background="@drawable/fadeout_top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/bottomFadeout"
            android:layout_width="match_parent"
            android:layout_height="314dp"
            android:background="@drawable/fadeout_bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/imageLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/inputLayoutScroller"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainConstraint"
        app:layout_constraintVertical_weight="1.5">

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:minHeight="48dp"
                android:background="@drawable/input_field_style"
                android:paddingLeft="16dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingBottom="14dp"
                >
                <EditText
                    android:id="@+id/login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:background="@drawable/input_field_style"
                    android:fontFamily="@font/manrope_semibold"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:lineHeight="20sp"
                    android:textAppearance="@style/inputFieldText"
                    android:textColor="@color/white"
                    android:textColorHint="@color/GrayFaded"
                    android:textFontWeight="700"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageButton
                    android:id="@+id/deleteLogin"
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/DarkFaded"
                    android:contentDescription="@string/closeicon"
                    android:src="@drawable/close_icon"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAppearance="@style/inputFieldTextError"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:minHeight="48dp"
                android:background="@drawable/input_field_style"
                android:backgroundTint="@color/DarkFaded"
                android:paddingLeft="16dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingBottom="14dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field_style"
                    android:backgroundTint="@color/DarkFaded"
                    android:fontFamily="@font/manrope_semibold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/inputFieldText"
                    android:textColor="@color/white"
                    android:textColorHint="@color/GrayFaded"
                    android:textFontWeight="700"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/passwordVisibility"
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/DarkFaded"
                    android:contentDescription="@string/passwordVisibility"
                    android:src="@drawable/eye_on"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAppearance="@style/inputFieldTextError"/>

        </LinearLayout>

    </ScrollView>


    <android.widget.Button
        android:id="@+id/entry"
        android:layout_width="364dp"
        android:layout_height="0dp"
        android:minHeight="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/secondary_button_shape"
        android:enabled="false"
        android:text="@string/entry"
        android:textAppearance="@style/buttonTextNotActive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutScroller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="0.8"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/mainConstraint"
        app:layout_constraintStart_toStartOf="@+id/mainConstraint"
        app:layout_constraintTop_toTopOf="@+id/mainConstraint">

        <android.widget.Button
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_button_style"
            android:contentDescription="@string/backbutton"
            android:drawableStart="@drawable/back_icon" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/manrope_medium"
            android:lineHeight="32sp"
            android:text="@string/sign_in_screen_text"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>